# plot_posthoc_test

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  LICENSE.txt  PACKAGE_STRUCTURE.md  README.md  USAGE_EXAMPLES.md  __init__.py  behavior figure annotation tests.ipynb  index.html  notebook_setup.py  objects.inv  plot_stat_annotate.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
Function .py Storage/: ax_modifier_functions.py  custom_module_imports.py  dataframe_annotation_functions.py  dimension_reduce.py  helper_functions.py  paper_plot.mplstyle  preprocess_data.py  sns_plotting_config.py  stat_annotation_dependent_functions.py  stat_tests.py
api/: index.html
doc/: mkdocs.yml
doc/docs/: api.md  changelog.md  index.md  usage.md
doc/site/: 404.html  index.html
doc/site/search/: search_index.json
src/plot_posthoc_test/: __init__.py  ax_inference.py  plot_stat_annotate.py
src/plot_posthoc_test/utils/: __init__.py  ax_modifier_functions.py  helpers.py  stat_tests.py
tests/: test_api.py
