[tool.poetry]
name = "plot_posthoc_test"
version = "0.1.0"
description = "A project for plotting post hoc test results"
authors = ["Carlos Johnson-Cruz <cjohnsoncruz@gmail.com>"]
packages = [{ include = "plot_posthoc_test", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"